hphp/hack/test/typecheck/type_structure/type_structure_tuple.php.exp
File "type_structure_tuple.php", line 16, characters 3-13:
  TypeStructure<(int, string)>
File "type_structure_tuple.php", line 17, characters 3-27:
  (TypeStructure<int>, TypeStructure<string>)
File "type_structure_tuple.php", line 22, characters 3-13:
  TypeStructure<(bool, float, optional int)>
File "type_structure_tuple.php", line 23, characters 3-27:
  (TypeStructure<bool>, TypeStructure<float>)
File "type_structure_tuple.php", line 24, characters 3-36:
  (TypeStructure<int>)
File "type_structure_tuple.php", line 27, characters 3-13:
  TypeStructure<(float, nonnull...)>
File "type_structure_tuple.php", line 28, characters 3-27:
  (TypeStructure<float>)
File "type_structure_tuple.php", line 31, characters 3-30:
  TypeStructure<nonnull>
ERROR: File "type_structure_tuple.php", line 19, characters 6-26:
The field `optional_elem_types` may not be present in this shape. Use `??` or `Shapes::idx()` instead. (Typing[4165])
  File "typestructure.hhi", line 63, characters 6-26:
  This is where the field was declared as optional.
ERROR: File "type_structure_tuple.php", line 21, characters 6-20:
The field `variadic_type` may not be present in this shape. Use `??` or `Shapes::idx()` instead. (Typing[4165])
  File "typestructure.hhi", line 64, characters 6-20:
  This is where the field was declared as optional.
ERROR: File "type_structure_tuple.php", line 26, characters 6-20:
The field `variadic_type` may not be present in this shape. Use `??` or `Shapes::idx()` instead. (Typing[4165])
  File "typestructure.hhi", line 64, characters 6-20:
  This is where the field was declared as optional.
ERROR: File "type_structure_tuple.php", line 30, characters 6-26:
The field `optional_elem_types` may not be present in this shape. Use `??` or `Shapes::idx()` instead. (Typing[4165])
  File "typestructure.hhi", line 63, characters 6-26:
  This is where the field was declared as optional.
